using System.Collections;
using System.Collections.Generic;
using UnityEngine;

public static class Defines
{
    public const string ShotAnimationClip = "shot";
    public const string WalkAnimationClip = "walk";
    public const string RunAnimationClip = "run";
    public const string AttackAnimationClip = "attack";
    public const string ReLoadClip = "reload";

    public const string EnemyTag="Enemy";

    public const int gameScene = 1;
    public const int startScene= 0;
}
